--- a/Back-end/Api Template/Api Template/Web.config
+++ b/Back-end/Api Template/Api Template/Web.config
@@ -73,6 +73,7 @@
   <connectionStrings>
     <add name="TemplateEntities" connectionString="metadata=res://*/Models.Template.TemplateModel.csdl|res://*/Models.Template.TemplateModel.ssdl|res://*/Models.Template.TemplateModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=TP_Integrador_G4_LPPA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="TsEntities" connectionString="metadata=res://*/Models.ts.TS.csdl|res://*/Models.ts.TS.ssdl|res://*/Models.ts.TS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-J0J5MU4\SQLEXPRESS;initial catalog=TP_Integrador_G4_LPPA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="sistema_control_comercioEntities" connectionString="metadata=res://*/Models.BD.BD.csdl|res://*/Models.BD.BD.ssdl|res://*/Models.BD.BD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4BB92RS\SQLEXPRESS;initial catalog=sistema_control_comercio;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.webServer>
     <handlers>
