--- a/Back-end/Api Template/Api Template/Api_control_comercio.csproj
+++ b/Back-end/Api Template/Api Template/Api_control_comercio.csproj
@@ -481,6 +481,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\CryptographyService.cs" />
     <Compile Include="Utils\EnumHelper.cs" />
+    <Compile Include="Utils\Manager\ABMs\productRawMaterialManager.cs" />
+    <Compile Include="Utils\Manager\ABMs\userPermissionManager.cs" />
+    <Compile Include="Utils\Manager\ABMs\userProfileManager.cs" />
+    <Compile Include="Utils\Manager\ABMs\profileProfileManager.cs" />
+    <Compile Include="Utils\Manager\ABMs\profilePermissionManager.cs" />
     <Compile Include="Utils\Manager\ABMs\paymentMethodManager.cs" />
     <Compile Include="Utils\Manager\ABMs\userManager.cs" />
     <Compile Include="Utils\Manager\ABMs\unitOfMeasurementManager.cs" />
@@ -495,6 +500,11 @@
     <Compile Include="Utils\Manager\ABMs\employeeManager.cs" />
     <Compile Include="Utils\Manager\ABMs\companyManager.cs" />
     <Compile Include="Utils\Manager\ABMs\categoryManager.cs" />
+    <Compile Include="Utils\Manager\Ventas\SaleManager.cs" />
+    <Compile Include="Utils\Manager\Ventas\SaleOrderManager.cs" />
+    <Compile Include="Utils\Manager\Pagos\paymentSupplierOrderManager.cs" />
+    <Compile Include="Utils\Manager\Pagos\paymentSupplierManager.cs" />
+    <Compile Include="Utils\Manager\Pagos\paymentServiceManager.cs" />
     <Compile Include="Utils\PermissionManager.cs" />
     <Compile Include="Utils\SerializationService.cs" />
     <Compile Include="Utils\SqlHelper.cs" />
@@ -595,8 +605,6 @@
     <Folder Include="Entities\ABMs\" />
     <Folder Include="Entities\Pagos\" />
     <Folder Include="Entities\Ventas\" />
-    <Folder Include="Utils\Manager\Pagos\" />
-    <Folder Include="Utils\Manager\Ventas\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
